--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 project (the_top)
 
-set (SRCS Task.cpp SysInfo.cpp main.cpp)
+set (SRCS SysInfo.cpp main.cpp)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable (the_top ${SRCS})
+target_link_libraries (the_top ncurses)
