Add interface for system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
+cmake_minimum_required (VERSION 3.7)
 project (the_top)
 
-set (SRCS SysInfo.cpp main.cpp Visual_ncs.cpp The_top.cpp)
+set (SRCS main.cpp Visual_ncs.cpp The_top.cpp)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+add_library (SysInfo SHARED SysInfo.cpp)
 add_executable (the_top ${SRCS})
-target_link_libraries (the_top ncurses)
+target_link_libraries (the_top SysInfo ncurses)
